# DreamPlex

./: CHANGES.md  configure.ac  xml2po.py
.github/workflows/: DreamPlex.yml
CONTROL/: control
doc/: pms-api.txt
po/: cs.po  da.po  de.po  en.po  en_GB.po  fr.po
src/: DPH_MovingLabel.py  DPH_PlexGdm.py  DPH_RemoteHandler.py  DPH_RemoteListener.py  DPH_ScreenHelper.py  DPH_Singleton.py  DPH_StillPicture.py  DPH_SubscriptionManager.py  DPH_Translations.py  DPH_WOL.py  DP_About.py  DP_HelperScreens.py  DP_LibMain.py  DP_LibMixed.py  DP_LibMovies.py  DP_LibMusic.py  DP_LibShows.py  DP_MainMenu.py  DP_Mappings.py  DP_PathSelector.py  DP_Player.py  DP_PlexLibrary.py  DP_Server.py  DP_ServerMenu.py  DP_Settings.py  DP_Summary.py  DP_Syncer.py  DP_SystemCheck.py  DP_Users.py  DP_View.py  DP_ViewFactory.py  DP_ViewMixed.py  DP_ViewMovies.py  DP_ViewMusic.py  DP_ViewShows.py  Makefile.am  __common__.py  __init__.py  __plugin__.py  plugin.py
src/fonts/: Makefile.am
src/skins/: Makefile.am
src/skins/BlueMod/: Makefile.am  skin.xml
src/skins/BlueMod/icons/: Makefile.am
src/skins/BlueMod/images/: Makefile.am
src/skins/BlueMod/picons/: Makefile.am
src/skins/BlueMod_FHD/: Makefile.am  skin.xml
src/skins/BlueMod_FHD/icons/: Makefile.am
src/skins/BlueMod_FHD/images/: Makefile.am
src/skins/BlueMod_FHD/picons/: Makefile.am
src/skins/default/: Makefile.am  params  skin.xml
src/skins/default_FHD/: Makefile.am  params  skin.xml
